--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "body-parse": "^0.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "express-fileupload": "^1.4.0",
+    "http-errors": "^2.0.0",
+    "imgur": "^2.2.0",
     "mongoose": "^7.0.3",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.22"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.22",
+    "Router": "^2.1.0",
+    "tslib": "^2.5.0"
   }
 }
