--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parse": "^0.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -15,11 +16,13 @@
     "express-fileupload": "^1.4.0",
     "http-errors": "^2.0.0",
     "imgur": "^2.2.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "Router": "^2.1.0",
-    "tslib": "^2.5.0"
+    "tslib": "^2.5.0",
+    "validator": "^13.9.0"
   }
 }
