--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "express-fileupload": "^1.4.0",
+    "fcm-node": "^1.6.1",
+    "firebase": "^9.21.0",
+    "firebase-admin": "^11.8.0",
     "http-errors": "^2.0.0",
     "imgur": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
